@@ -2,6 +2,8 @@
 Changes with Apache Traffic Server 4.1.0
 
 
+  *) [TS-2301] Replace the CACHE_READY macro with CacheProcessor::IsCacheReady.
+
   *) [TS-2300] Remove the HIT_EVACUATE build option.
 
   *) [TS-2227] Allow for multiple config files for a header_rewrite plugin
